SAK-19410 applied patch from Sam
git-svn-id: https://source.sakaiproject.org/svn/content/trunk@84219 66ffb92e-73f9-0310-93c1-f5514f145a0a